# csharp-lab-generator

./: LICENSE  README.md  pyproject.toml
src/cslg/cli/: __init__.py
